--- a/src/components/NewProduct.css
+++ b/src/components/NewProduct.css
@@ -6,13 +6,6 @@
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
-.discount-row {
-  display: flex;
-  gap: 20px; /* Add space between the discount fields */
-}
-
-.discount-row .form-group {
-  flex: 1;
 }
 .form-title {
   font-size: 1.8rem;
@@ -23,6 +16,7 @@
 
 .form-group {
   margin-bottom: 15px;
+  flex: 1px;
 }
 
 .form-label {
@@ -47,8 +41,9 @@
 .discount-row {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
+  gap: 30px;
   margin-bottom: 10px;
+  
 }
 
 .form-actions {
